# ewf

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  glama.json  install.sh
.github/workflows/: ci.yml  release.yml
corpus/: fetch.sh
docs/: VALIDATION.md  parallel-chunk-decompression-task.md  usn-journal-validation-tools.md
ewf/: Cargo.toml
ewf-cli/: Cargo.toml
ewf-cli/src/: handlers.rs  main.rs  mcp.rs
ewf-mcp/: Cargo.toml
ewf-mcp/src/: main.rs
ewf/src/: chunk_table.rs  error.rs  ewf2.rs  lib.rs  parse.rs  reader.rs  sections.rs  types.rs
ewf/tests/: concurrent_reads.rs  e2e_dftt.rs  robustness_tests.rs  validate_maxpowers.rs  validate_szechuan.rs
fuzz/: Cargo.toml
src/: lib.rs
tests/: e2e_dftt.rs  validate_maxpowers.rs  validate_pcmus.rs  validate_szechuan.rs
