[workspace]
members = ["ewf", "ewf-cli"]
resolver = "2"

# Single source of truth for fields shared by every member (DRY): bump version /
# MSRV / license here once; members inherit via `field.workspace = true`.
[workspace.package]
version = "0.2.2"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/SecurityRonin/ewf"
homepage = "https://github.com/SecurityRonin/ewf"
documentation = "https://docs.rs/ewf"
authors = ["Albert Hui"]
keywords = ["forensics", "ewf", "e01", "encase", "disk-image"]

# Single source of truth for dependency versions (DRY): declare each once;
# members write `dep.workspace = true`. The inter-crate `ewf` version lives here
# too, so a bump touches one line instead of every member.
[workspace.dependencies]
ewf = { path = "ewf", version = "0.2.2" }
flate2 = "1"
lru = "0.12"
rayon = "1"
thiserror = "2"
log = "0.4"
glob = "0.3"
md-5 = "0.10"
sha-1 = "0.10"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
module_name_repetitions = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }
cast_possible_wrap = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
format_push_string = { level = "allow", priority = 1 }
format_collect = { level = "allow", priority = 1 }
too_many_lines = { level = "allow", priority = 1 }
items_after_statements = { level = "allow", priority = 1 }
similar_names = { level = "allow", priority = 1 }
manual_let_else = { level = "allow", priority = 1 }
