[package]
name = "ewf"
version = "0.2.1"
edition = "2021"
rust-version = "1.85"
description = "Pure Rust reader for Expert Witness Format (E01/EWF) forensic disk images"
license = "MIT"
repository = "https://github.com/SecurityRonin/ewf"
homepage = "https://github.com/SecurityRonin/ewf"
documentation = "https://docs.rs/ewf"
authors = ["Albert Hui"]
keywords = ["forensics", "ewf", "e01", "encase", "disk-image"]
categories = ["parser-implementations", "filesystem"]
readme = "../README.md"
exclude = ["tests/data/", "tarpaulin-report.json"]

[features]
default = ["verify"]
verify = ["dep:md-5", "dep:sha-1"]

[dependencies]
flate2 = "1"
lru = "0.12"
thiserror = "2"
log = "0.4"
glob = "0.3"
md-5 = { version = "0.10", optional = true }
sha-1 = { version = "0.10", optional = true }

[dev-dependencies]
tempfile = "3"
md-5 = "0.10"

[lints]
workspace = true
